--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@uiw/react-md-editor": "^4.0.5",
     "cheerio": "^1.0.0",
     "crypto-js": "^4.2.0",
     "firebase": "^10.13.2",
