--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "redux": "^5.0.1",
     "typescript": "^5.6.2",
     "web-vitals": "^2.1.4"
   },
