--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.36.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,7 +27,6 @@
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "redux": "^5.0.1",
-    "typescript": "^5.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -59,6 +59,7 @@
     "@types/css-modules": "^1.0.5",
     "@types/react-color": "^3.0.12",
     "@types/react-helmet": "^6.1.11",
-    "@types/react-js-pagination": "^3.0.7"
+    "@types/react-js-pagination": "^3.0.7",
+    "typescript": "^4.9.5"
   }
 }
