--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.54.2",
     "react-js-pagination": "^3.0.3",
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
