--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^4.36.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -27,6 +28,7 @@
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "redux": "^5.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -60,6 +62,9 @@
     "@types/react-color": "^3.0.12",
     "@types/react-helmet": "^6.1.11",
     "@types/react-js-pagination": "^3.0.7",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.14",
     "typescript": "^4.9.5"
   }
 }
