--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.3.0",
     "@uiw/react-md-editor": "^4.0.5",
     "cheerio": "^1.0.0",
+    "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "firebase": "^10.13.2",
     "react": "^18.3.1",
@@ -28,6 +29,7 @@
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "redux": "^5.0.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
