--- a/package.json
+++ b/package.json
@@ -59,14 +59,17 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@tailwindcss/cli": "^4.0.14",
+    "@tailwindcss/postcss": "^4.0.14",
     "@types/crypto-js": "^4.2.2",
     "@types/css-modules": "^1.0.5",
     "@types/react-color": "^3.0.12",
     "@types/react-helmet": "^6.1.11",
     "@types/react-js-pagination": "^3.0.7",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.14",
+    "autoprefixer": "^9",
+    "postcss": "^7",
+    "postcss-loader": "^8.1.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typescript": "^4.9.5"
   }
 }
